// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Combobox in RTL renders Default 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        dir="rtl"
      >
        <div
          class="flex flex-col lg:flex-row lg:justify-center items-center w-full gap-4"
        >
          <span
            class="w-full flex flex-col justify-between rounded-lg py-2 px-3 bg-goku gap-y-1 shadow-input hover:shadow-input-hov focus:shadow-input-focus focus:outline-none focus-visible::shadow-input-focus focus-visible::outline-none max-w-xs"
            tabindex="-1"
          >
            <div
              class="flex flex-wrap justify-start items-start gap-1"
            >
              <span
                class="flex gap-2 items-center flex-grow-0 flex-shrink-0 self-center max-w-full [&>div]:max-w-full"
              >
                <div
                  class="relative"
                >
                  <span
                    class="text-moon-16 w-full text-bulma truncate"
                  >
                    <div
                      class="flex items-center rounded-moon-i-xs gap-1 select-none text-goku bg-bulma py-1 ps-2 pe-1 h-6 text-moon-10-caption uppercase font-medium"
                    >
                      <span
                        class="break-all truncate"
                      >
                        irgjogjoeirjgoerjg kkh wiu giwg iwn gjigew iwjng
                      </span>
                      <span
                        class="text-moon-16"
                      >
                        <svg
                          class="cursor-pointer"
                          fill="none"
                          height="1em"
                          viewBox="0 0 32 32"
                          width="1em"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M10 10L16 16M16 16L10 22M16 16L22 22M16 16L22 10"
                            stroke="currentColor"
                            stroke-linecap="round"
                            stroke-linejoin="round"
                          />
                        </svg>
                      </span>
                    </div>
                  </span>
                </div>
              </span>
              <span
                class="flex gap-2 items-center flex-grow-0 flex-shrink-0 self-center max-w-full [&>div]:max-w-full"
              >
                <div
                  class="relative"
                >
                  <span
                    class="text-moon-16 w-full text-bulma truncate"
                  >
                    <div
                      class="flex items-center rounded-moon-i-xs gap-1 select-none text-goku bg-bulma py-1 ps-2 pe-1 h-6 text-moon-10-caption uppercase font-medium"
                    >
                      <span
                        class="break-all truncate"
                      >
                        cwejn
                      </span>
                      <span
                        class="text-moon-16"
                      >
                        <svg
                          class="cursor-pointer"
                          fill="none"
                          height="1em"
                          viewBox="0 0 32 32"
                          width="1em"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M10 10L16 16M16 16L10 22M16 16L22 22M16 16L22 10"
                            stroke="currentColor"
                            stroke-linecap="round"
                            stroke-linejoin="round"
                          />
                        </svg>
                      </span>
                    </div>
                  </span>
                </div>
              </span>
              <span
                class="flex gap-2 items-center flex-grow-0 flex-shrink-0 self-center max-w-full [&>div]:max-w-full"
              >
                <div
                  class="relative"
                >
                  <span
                    class="text-moon-16 w-full text-bulma truncate"
                  >
                    <div
                      class="flex items-center rounded-moon-i-xs gap-1 select-none text-goku bg-bulma py-1 ps-2 pe-1 h-6 text-moon-10-caption uppercase font-medium"
                    >
                      <span
                        class="break-all truncate"
                      >
                        efoijoe iuehi hfiuhwfiueh iuehfiuwhefiwh fiecjwoiejow
                      </span>
                      <span
                        class="text-moon-16"
                      >
                        <svg
                          class="cursor-pointer"
                          fill="none"
                          height="1em"
                          viewBox="0 0 32 32"
                          width="1em"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M10 10L16 16M16 16L10 22M16 16L22 22M16 16L22 10"
                            stroke="currentColor"
                            stroke-linecap="round"
                            stroke-linejoin="round"
                          />
                        </svg>
                      </span>
                    </div>
                  </span>
                </div>
              </span>
            </div>
            <input
              class="block w-full max-w-full py-0 m-0 appearance-none text-bulma transition-shadow box-border relative z-[2] shadow-input hover:shadow-input-hov focus:shadow-input-focus focus:outline-none focus-visible::shadow-input-focus focus-visible::outline-none rounded-moon-i-sm rtl:[&:not([disabled])]:[&:not([readonly])]:[&:not([readonly])]:hover:rounded-moon-i-sm rtl:[&:not([disabled])]:[&:not([readonly])]:focus:rounded-moon-i-sm rtl:invalid:rounded-moon-i-sm ltr:[&:not([disabled])]:[&:not([readonly])]:hover:rounded-moon-i-sm ltr:[&:not([disabled])]:[&:not([readonly])]:focus:rounded-moon-i-sm ltr:invalid:rounded-moon-i-sm before:box-border after:box-border placeholder:text-trunks placeholder:opacity-100 placeholder:transition-opacity placeholder:delay-75 read-only:outline-0 read-only:border-none read-only:cursor-not-allowed read-only:hover:shadow-input read-only:focus:shadow-input read-only:focus-visible:shadow-input input-dt-shared invalid:shadow-input-err invalid:hover:shadow-input-err invalid:focus:shadow-input-err invalid:focus-visible:shadow-input-err flex-grow h-full border-0 !rounded-none bg-transparent px-0 !shadow-none hover:shadow-none focus:shadow-none focus-visible:shadow-none text-moon-16 leading-5"
              type="text"
            />
          </span>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      dir="rtl"
    >
      <div
        class="flex flex-col lg:flex-row lg:justify-center items-center w-full gap-4"
      >
        <span
          class="w-full flex flex-col justify-between rounded-lg py-2 px-3 bg-goku gap-y-1 shadow-input hover:shadow-input-hov focus:shadow-input-focus focus:outline-none focus-visible::shadow-input-focus focus-visible::outline-none max-w-xs"
          tabindex="-1"
        >
          <div
            class="flex flex-wrap justify-start items-start gap-1"
          >
            <span
              class="flex gap-2 items-center flex-grow-0 flex-shrink-0 self-center max-w-full [&>div]:max-w-full"
            >
              <div
                class="relative"
              >
                <span
                  class="text-moon-16 w-full text-bulma truncate"
                >
                  <div
                    class="flex items-center rounded-moon-i-xs gap-1 select-none text-goku bg-bulma py-1 ps-2 pe-1 h-6 text-moon-10-caption uppercase font-medium"
                  >
                    <span
                      class="break-all truncate"
                    >
                      irgjogjoeirjgoerjg kkh wiu giwg iwn gjigew iwjng
                    </span>
                    <span
                      class="text-moon-16"
                    >
                      <svg
                        class="cursor-pointer"
                        fill="none"
                        height="1em"
                        viewBox="0 0 32 32"
                        width="1em"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M10 10L16 16M16 16L10 22M16 16L22 22M16 16L22 10"
                          stroke="currentColor"
                          stroke-linecap="round"
                          stroke-linejoin="round"
                        />
                      </svg>
                    </span>
                  </div>
                </span>
              </div>
            </span>
            <span
              class="flex gap-2 items-center flex-grow-0 flex-shrink-0 self-center max-w-full [&>div]:max-w-full"
            >
              <div
                class="relative"
              >
                <span
                  class="text-moon-16 w-full text-bulma truncate"
                >
                  <div
                    class="flex items-center rounded-moon-i-xs gap-1 select-none text-goku bg-bulma py-1 ps-2 pe-1 h-6 text-moon-10-caption uppercase font-medium"
                  >
                    <span
                      class="break-all truncate"
                    >
                      cwejn
                    </span>
                    <span
                      class="text-moon-16"
                    >
                      <svg
                        class="cursor-pointer"
                        fill="none"
                        height="1em"
                        viewBox="0 0 32 32"
                        width="1em"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M10 10L16 16M16 16L10 22M16 16L22 22M16 16L22 10"
                          stroke="currentColor"
                          stroke-linecap="round"
                          stroke-linejoin="round"
                        />
                      </svg>
                    </span>
                  </div>
                </span>
              </div>
            </span>
            <span
              class="flex gap-2 items-center flex-grow-0 flex-shrink-0 self-center max-w-full [&>div]:max-w-full"
            >
              <div
                class="relative"
              >
                <span
                  class="text-moon-16 w-full text-bulma truncate"
                >
                  <div
                    class="flex items-center rounded-moon-i-xs gap-1 select-none text-goku bg-bulma py-1 ps-2 pe-1 h-6 text-moon-10-caption uppercase font-medium"
                  >
                    <span
                      class="break-all truncate"
                    >
                      efoijoe iuehi hfiuhwfiueh iuehfiuwhefiwh fiecjwoiejow
                    </span>
                    <span
                      class="text-moon-16"
                    >
                      <svg
                        class="cursor-pointer"
                        fill="none"
                        height="1em"
                        viewBox="0 0 32 32"
                        width="1em"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M10 10L16 16M16 16L10 22M16 16L22 22M16 16L22 10"
                          stroke="currentColor"
                          stroke-linecap="round"
                          stroke-linejoin="round"
                        />
                      </svg>
                    </span>
                  </div>
                </span>
              </div>
            </span>
          </div>
          <input
            class="block w-full max-w-full py-0 m-0 appearance-none text-bulma transition-shadow box-border relative z-[2] shadow-input hover:shadow-input-hov focus:shadow-input-focus focus:outline-none focus-visible::shadow-input-focus focus-visible::outline-none rounded-moon-i-sm rtl:[&:not([disabled])]:[&:not([readonly])]:[&:not([readonly])]:hover:rounded-moon-i-sm rtl:[&:not([disabled])]:[&:not([readonly])]:focus:rounded-moon-i-sm rtl:invalid:rounded-moon-i-sm ltr:[&:not([disabled])]:[&:not([readonly])]:hover:rounded-moon-i-sm ltr:[&:not([disabled])]:[&:not([readonly])]:focus:rounded-moon-i-sm ltr:invalid:rounded-moon-i-sm before:box-border after:box-border placeholder:text-trunks placeholder:opacity-100 placeholder:transition-opacity placeholder:delay-75 read-only:outline-0 read-only:border-none read-only:cursor-not-allowed read-only:hover:shadow-input read-only:focus:shadow-input read-only:focus-visible:shadow-input input-dt-shared invalid:shadow-input-err invalid:hover:shadow-input-err invalid:focus:shadow-input-err invalid:focus-visible:shadow-input-err flex-grow h-full border-0 !rounded-none bg-transparent px-0 !shadow-none hover:shadow-none focus:shadow-none focus-visible:shadow-none text-moon-16 leading-5"
            type="text"
          />
        </span>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Combobox renders Default 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="flex flex-col lg:flex-row lg:justify-center items-center w-full gap-4"
      >
        <span
          class="w-full flex flex-col justify-between rounded-lg py-2 px-3 bg-goku gap-y-1 shadow-input hover:shadow-input-hov focus:shadow-input-focus focus:outline-none focus-visible::shadow-input-focus focus-visible::outline-none max-w-xs"
          tabindex="-1"
        >
          <div
            class="flex flex-wrap justify-start items-start gap-1"
          >
            <span
              class="flex gap-2 items-center flex-grow-0 flex-shrink-0 self-center max-w-full [&>div]:max-w-full"
            >
              <div
                class="relative"
              >
                <span
                  class="text-moon-16 w-full text-bulma truncate"
                >
                  <div
                    class="flex items-center rounded-moon-i-xs gap-1 select-none text-goku bg-bulma py-1 ps-2 pe-1 h-6 text-moon-10-caption uppercase font-medium"
                  >
                    <span
                      class="break-all truncate"
                    >
                      irgjogjoeirjgoerjg kkh wiu giwg iwn gjigew iwjng
                    </span>
                    <span
                      class="text-moon-16"
                    >
                      <svg
                        class="cursor-pointer"
                        fill="none"
                        height="1em"
                        viewBox="0 0 32 32"
                        width="1em"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M10 10L16 16M16 16L10 22M16 16L22 22M16 16L22 10"
                          stroke="currentColor"
                          stroke-linecap="round"
                          stroke-linejoin="round"
                        />
                      </svg>
                    </span>
                  </div>
                </span>
              </div>
            </span>
            <span
              class="flex gap-2 items-center flex-grow-0 flex-shrink-0 self-center max-w-full [&>div]:max-w-full"
            >
              <div
                class="relative"
              >
                <span
                  class="text-moon-16 w-full text-bulma truncate"
                >
                  <div
                    class="flex items-center rounded-moon-i-xs gap-1 select-none text-goku bg-bulma py-1 ps-2 pe-1 h-6 text-moon-10-caption uppercase font-medium"
                  >
                    <span
                      class="break-all truncate"
                    >
                      cwejn
                    </span>
                    <span
                      class="text-moon-16"
                    >
                      <svg
                        class="cursor-pointer"
                        fill="none"
                        height="1em"
                        viewBox="0 0 32 32"
                        width="1em"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M10 10L16 16M16 16L10 22M16 16L22 22M16 16L22 10"
                          stroke="currentColor"
                          stroke-linecap="round"
                          stroke-linejoin="round"
                        />
                      </svg>
                    </span>
                  </div>
                </span>
              </div>
            </span>
            <span
              class="flex gap-2 items-center flex-grow-0 flex-shrink-0 self-center max-w-full [&>div]:max-w-full"
            >
              <div
                class="relative"
              >
                <span
                  class="text-moon-16 w-full text-bulma truncate"
                >
                  <div
                    class="flex items-center rounded-moon-i-xs gap-1 select-none text-goku bg-bulma py-1 ps-2 pe-1 h-6 text-moon-10-caption uppercase font-medium"
                  >
                    <span
                      class="break-all truncate"
                    >
                      efoijoe iuehi hfiuhwfiueh iuehfiuwhefiwh fiecjwoiejow
                    </span>
                    <span
                      class="text-moon-16"
                    >
                      <svg
                        class="cursor-pointer"
                        fill="none"
                        height="1em"
                        viewBox="0 0 32 32"
                        width="1em"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M10 10L16 16M16 16L10 22M16 16L22 22M16 16L22 10"
                          stroke="currentColor"
                          stroke-linecap="round"
                          stroke-linejoin="round"
                        />
                      </svg>
                    </span>
                  </div>
                </span>
              </div>
            </span>
          </div>
          <input
            class="block w-full max-w-full py-0 m-0 appearance-none text-bulma transition-shadow box-border relative z-[2] shadow-input hover:shadow-input-hov focus:shadow-input-focus focus:outline-none focus-visible::shadow-input-focus focus-visible::outline-none rounded-moon-i-sm rtl:[&:not([disabled])]:[&:not([readonly])]:[&:not([readonly])]:hover:rounded-moon-i-sm rtl:[&:not([disabled])]:[&:not([readonly])]:focus:rounded-moon-i-sm rtl:invalid:rounded-moon-i-sm ltr:[&:not([disabled])]:[&:not([readonly])]:hover:rounded-moon-i-sm ltr:[&:not([disabled])]:[&:not([readonly])]:focus:rounded-moon-i-sm ltr:invalid:rounded-moon-i-sm before:box-border after:box-border placeholder:text-trunks placeholder:opacity-100 placeholder:transition-opacity placeholder:delay-75 read-only:outline-0 read-only:border-none read-only:cursor-not-allowed read-only:hover:shadow-input read-only:focus:shadow-input read-only:focus-visible:shadow-input input-dt-shared invalid:shadow-input-err invalid:hover:shadow-input-err invalid:focus:shadow-input-err invalid:focus-visible:shadow-input-err flex-grow h-full border-0 !rounded-none bg-transparent px-0 !shadow-none hover:shadow-none focus:shadow-none focus-visible:shadow-none text-moon-16 leading-5"
            type="text"
          />
        </span>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="flex flex-col lg:flex-row lg:justify-center items-center w-full gap-4"
    >
      <span
        class="w-full flex flex-col justify-between rounded-lg py-2 px-3 bg-goku gap-y-1 shadow-input hover:shadow-input-hov focus:shadow-input-focus focus:outline-none focus-visible::shadow-input-focus focus-visible::outline-none max-w-xs"
        tabindex="-1"
      >
        <div
          class="flex flex-wrap justify-start items-start gap-1"
        >
          <span
            class="flex gap-2 items-center flex-grow-0 flex-shrink-0 self-center max-w-full [&>div]:max-w-full"
          >
            <div
              class="relative"
            >
              <span
                class="text-moon-16 w-full text-bulma truncate"
              >
                <div
                  class="flex items-center rounded-moon-i-xs gap-1 select-none text-goku bg-bulma py-1 ps-2 pe-1 h-6 text-moon-10-caption uppercase font-medium"
                >
                  <span
                    class="break-all truncate"
                  >
                    irgjogjoeirjgoerjg kkh wiu giwg iwn gjigew iwjng
                  </span>
                  <span
                    class="text-moon-16"
                  >
                    <svg
                      class="cursor-pointer"
                      fill="none"
                      height="1em"
                      viewBox="0 0 32 32"
                      width="1em"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M10 10L16 16M16 16L10 22M16 16L22 22M16 16L22 10"
                        stroke="currentColor"
                        stroke-linecap="round"
                        stroke-linejoin="round"
                      />
                    </svg>
                  </span>
                </div>
              </span>
            </div>
          </span>
          <span
            class="flex gap-2 items-center flex-grow-0 flex-shrink-0 self-center max-w-full [&>div]:max-w-full"
          >
            <div
              class="relative"
            >
              <span
                class="text-moon-16 w-full text-bulma truncate"
              >
                <div
                  class="flex items-center rounded-moon-i-xs gap-1 select-none text-goku bg-bulma py-1 ps-2 pe-1 h-6 text-moon-10-caption uppercase font-medium"
                >
                  <span
                    class="break-all truncate"
                  >
                    cwejn
                  </span>
                  <span
                    class="text-moon-16"
                  >
                    <svg
                      class="cursor-pointer"
                      fill="none"
                      height="1em"
                      viewBox="0 0 32 32"
                      width="1em"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M10 10L16 16M16 16L10 22M16 16L22 22M16 16L22 10"
                        stroke="currentColor"
                        stroke-linecap="round"
                        stroke-linejoin="round"
                      />
                    </svg>
                  </span>
                </div>
              </span>
            </div>
          </span>
          <span
            class="flex gap-2 items-center flex-grow-0 flex-shrink-0 self-center max-w-full [&>div]:max-w-full"
          >
            <div
              class="relative"
            >
              <span
                class="text-moon-16 w-full text-bulma truncate"
              >
                <div
                  class="flex items-center rounded-moon-i-xs gap-1 select-none text-goku bg-bulma py-1 ps-2 pe-1 h-6 text-moon-10-caption uppercase font-medium"
                >
                  <span
                    class="break-all truncate"
                  >
                    efoijoe iuehi hfiuhwfiueh iuehfiuwhefiwh fiecjwoiejow
                  </span>
                  <span
                    class="text-moon-16"
                  >
                    <svg
                      class="cursor-pointer"
                      fill="none"
                      height="1em"
                      viewBox="0 0 32 32"
                      width="1em"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M10 10L16 16M16 16L10 22M16 16L22 22M16 16L22 10"
                        stroke="currentColor"
                        stroke-linecap="round"
                        stroke-linejoin="round"
                      />
                    </svg>
                  </span>
                </div>
              </span>
            </div>
          </span>
        </div>
        <input
          class="block w-full max-w-full py-0 m-0 appearance-none text-bulma transition-shadow box-border relative z-[2] shadow-input hover:shadow-input-hov focus:shadow-input-focus focus:outline-none focus-visible::shadow-input-focus focus-visible::outline-none rounded-moon-i-sm rtl:[&:not([disabled])]:[&:not([readonly])]:[&:not([readonly])]:hover:rounded-moon-i-sm rtl:[&:not([disabled])]:[&:not([readonly])]:focus:rounded-moon-i-sm rtl:invalid:rounded-moon-i-sm ltr:[&:not([disabled])]:[&:not([readonly])]:hover:rounded-moon-i-sm ltr:[&:not([disabled])]:[&:not([readonly])]:focus:rounded-moon-i-sm ltr:invalid:rounded-moon-i-sm before:box-border after:box-border placeholder:text-trunks placeholder:opacity-100 placeholder:transition-opacity placeholder:delay-75 read-only:outline-0 read-only:border-none read-only:cursor-not-allowed read-only:hover:shadow-input read-only:focus:shadow-input read-only:focus-visible:shadow-input input-dt-shared invalid:shadow-input-err invalid:hover:shadow-input-err invalid:focus:shadow-input-err invalid:focus-visible:shadow-input-err flex-grow h-full border-0 !rounded-none bg-transparent px-0 !shadow-none hover:shadow-none focus:shadow-none focus-visible:shadow-none text-moon-16 leading-5"
          type="text"
        />
      </span>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
